# advent-of-code-2020

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.sh  format.sh  make.sh  run.sh
aoc_common/: CMakeLists.txt
aoc_common/include/utils/: utils.h
aoc_common/src/utils/: utils.cpp
day_01/: CMakeLists.txt
day_01/include/day_01/: day_01.h
day_01/src/: main.cpp
day_01/src/day_01/: day_01.cpp
day_02/: CMakeLists.txt
day_02/include/day_02/: day_02.h
day_02/include/password/: password.h
day_02/include/passwordpolicy/: passwordpolicy.h
day_02/src/: main.cpp
day_02/src/day_02/: day_02.cpp
day_02/src/password/: password.cpp
day_02/src/passwordpolicy/: passwordpolicy.cpp
day_03/include/day_03/: day_03.h
day_03/include/location/: location.h
day_03/include/world/: world.h
day_03/src/location/: location.cpp
day_04/include/day_04/: day_04.h
day_04/src/: main.cpp
day_05/: CMakeLists.txt
day_05/include/day_05/: day_05.h
day_05/src/day_05/: day_05.cpp
src/aoc_common/include/utils/: utils.h
src/aoc_common/src/utils/: utils.cpp
src/day_01/: CMakeLists.txt
src/day_01/src/: main.cpp
src/day_01/src/day_01/: day_01.cpp
src/day_02/: CMakeLists.txt
src/day_02/include/password/: password.h
src/day_02/include/passwordpolicy/: passwordpolicy.h
src/day_02/src/: main.cpp
src/day_03/: CMakeLists.txt
src/day_03/src/: main.cpp
src/day_03/src/day_03/: day_03.cpp
src/day_03/src/world/: world.cpp
src/day_04/: CMakeLists.txt
src/day_04/include/passport/: passport.h
src/day_04/src/day_04/: day_04.cpp
src/day_04/src/passport/: passport.cpp
src/day_05/include/day_05/: day_05.h
src/day_05/src/: main.cpp
src/day_06/: CMakeLists.txt
src/day_06/include/day_06/: day_06.h
src/day_06/include/group/: group.h
src/day_06/src/: main.cpp
src/day_06/src/day_06/: day_06.cpp
src/day_06/src/group/: group.cpp
